# Altium-DBlib-source

./: .gitignore  Altium_DB_Lib_v1.1.0.postman_collection.json  Altium_DB_Lib_v1.2.0.postman_collection.json  Database_Libs.DbLib  Dockerfile  LICENSE  LibraryProject.PrjPcb  README.md  pablintino-altium.DbLib  pyproject.toml  requirements.txt
SQL/: CreateResistorView.sql  T272_DATABASE.sql
SQL/DDL/: t_AmplifiersInstrumentationOPAmpsBufferAmps_ddl.sql  t_BJT_Discrete_ddl.sql  t_CapacitorsCeramic_ddl.sql  t_ConectorsTerminalBlocksWiretoBoard_ddl.sql  t_DiodesRectifiersDiscrete_ddl.sql  t_DiodesTVS_ddl.sql  t_DiodesZenerDiscrete_ddl.sql  t_EmbeddedMicrocontrollers_ddl.sql  t_FerriteBeads_ddl.sql  t_InductorsFixed_ddl.sql  t_MOSFET_Discrete_ddl.sql  t_OscillatorsCrystals_ddl.sql  t_ResistorsSurfaceMount_ddl.sql  t_VoltageRegulatorsDCDCSwitchingRegulators_ddl.sql  z_CapacitorsCeramic_ddl.sql
SQL/Inserts/: INITIAL_INSERTS_altium_library_dbo_t_BJT_Discretes.sql  INITIAL_INSERTS_altium_library_dbo_t_Cap_1210.sql  INITIAL_INSERTS_altium_library_dbo_t_Cap_2220.sql  INITIAL_INSERTS_altium_library_dbo_t_ConnectorsTerminalBloacksWiretoBoard.sql  INITIAL_INSERTS_altium_library_dbo_t_Ferrite_Beads.sql  INITIAL_INSERTS_altium_library_dbo_t_Mosfet_Discretes.sql  (+2 more)
SQL/Views/: CreateBjtTransitorView.sql  (+56 more)
edaparts/: uwsgi.ini
python-api/: Dockerfile  app.py  requirements.txt
sources/: prestart.sh  start.sh  supervisord-worker-node.conf
tests/: __init__.py  component_model_mapper_test.py  component_service_test.py  conftest.py  inventory_service_test.py  search_service_test.py
(+376 files in other folders)
